--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "name": "playwright-tutorial",
     "version": "1.0.0",
     "main": "index.js",
-    "scripts": {},
+    "scripts": {
+      "test": "npx playwright test"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
